refactor: 가독성 위해 수정